Fixed wrapping issue with logo-text

--- a/src/App.css
+++ b/src/App.css
@@ -15,5 +15,37 @@
 }
 
 main {
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
   flex: 1 0 auto;
+}
+
+.hero-img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-image: url('/hero.jpg');
+  background-position-x: center;
+  background-position-y: bottom;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  align-items: center;
+  text-align: center;
+}
+
+@media only screen and (max-width: 992px) {
+  nav .brand-logo {
+    position: relative;
+    display: block;
+    text-align: center;
+  }
 }
